freedcs 수정 (#33)